[metadata]
name = tempest-report
summary = Addon for OpenStack tempest
#description-file = README.rst
author = eNovance SAS
author-email = christian.schwede@enovance.com
home-page = http://www.enovance.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = tempest_report
scripts = bin/tempest-report
